<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BotaniPlan</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>
    <string name="region">Region</string>
    <string name="temperature">%s°C</string>
    <string name="type_weather">Heavy \nRain</string>
    <string name="plant">Plant Name</string>
    <string name="percent">20%</string>
    <string name="predict_text" tools:ignore="ExtraTranslation">Prediksi Harga</string>
    <string name="prediksi" tools:ignore="ExtraTranslation">Prediksi</string>
    <string name="empty_data" tools:ignore="ExtraTranslation">Data tidak ditemukan</string>
    <string name="popular">Most Popular Horticulture</string>
    <string name="logout">Logout</string>
    <string name="username_layout">Username</string>
    <string name="email_layout">Email</string>
    <string name="email">Email</string>
    <string name="password_layout">Password</string>
    <string name="password">Password</string>
    <string name="change" tools:ignore="ExtraTranslation">Ubah</string>
    <string name="under_score">__</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="desc">Desc</string>
    <string name="see_details">See Details</string>
    <string name="informasi_geo">Berikut ini adalah kondisi geografis dari lokasi anda</string>
    <string name="input_prediksi">Temukan tanaman yang cocok untuk kondisi geografismu</string>
    <string name="ketinggian_title">Ketinggian</string>
    <string name="ketinggian">%s mdpl</string>
    <string name="curah_hujan">Curah Hujan</string>
    <string name="suhu">Suhu</string>
    <string name="kelembaban">Kelembaban</string>
    <string name="predict">Prediksi</string>
    <string name="mulai_prediksi">Mulai Prediksi</string>
    <string name="hasil_rekomendasi">Hasil Rekomendasi</string>
    <string name="result_text">Daftar tanaman yang mungkin cocok</string>
    <string name="login">Login</string>
    <string name="acc_availability">Belum punya akun?</string>
    <string name="acc_availability2">Sudah punya akun?</string>
    <string name="to_register">Daftar disini</string>
    <string name="recommendation_text">Rekomendasi Tanaman</string>
    <string name="to_login">Login disini</string>
    <string name="signup">Sign Up</string>
    <string name="start">Start</string>
    <string name="konsumsi" tools:ignore="ExtraTranslation">Dikonsumsi di Indonesia dalam Ribu Ton (2021)</string>
    <string name="invalid_email">Format alamat email salah</string>
    <string name="api_key">e61e1a9320bdb4be62e48baf4ef114b5</string>
    <string name="recomendation_failed">Proses pencarian tanaman gagal, mohon coba lagi</string>
    <string name="connection_failed">Data tidak ditemukan karena masalah jaringan</string>
    <string name="error_password">Panjang karakter password minimal 8 karakter atau lebih</string>
    <string name="app_desc">Aplikasi prediksi tanaman yang cocok untuk kondisi geografis petani</string>
    <string name="signup_failed">Terjadi kesalahan ketika memasukkan data</string>
    <string name="register_agreement">Dengan mendaftar, Anda menyetujui Persyaratan &amp; Ketentuan dan Kebijakan Privasi</string>
    <string name="detail_tanaman">Detail Tanaman</string>
    <string name="detail_desc">Detail Deskripsi</string>
    <string name="detail_name">Detail Nama</string>
    <string name="signup_pass_tittle">Selamat!</string>
    <string name="permission_rejected">Permisi ditolak</string>
    <string name="signup_successfully">Akun Anda telah berhasil dibuat, silahkan login untuk masuk ke halaman utama</string>
    <string name="category">Kategori</string>
    <string name="care_level">Tingkat Perawatan</string>
    <string name="size">Ukuran</string>
    <string name="result">Hasil</string>
    <string name="alert_login">Login gagal</string>
    <string name="back">Back</string>
    <string name="login_invalid">Pastikan email atau password yang Anda masukkan benar</string>
    <string name="market_price_prediction">Market Price Prediction</string>
    <string name="plant_type">Jenis Tanaman</string>
    <string name="harvest_area">Luas Panen</string>
    <string name="quantity">Kuantitas Panen</string>
    <string name="area">Pilih Daerah</string>
    <string name="title_predict">Prediksi Harga</string>
    <string name="rupiah">Rp.</string>
    <string name="nominal">_</string>
    <string name="hectar">(hektar)</string>
    <string name="kwintal">(kuintal)</string>
    <string name="password_reminder">Minimal 8 Karakter</string>
    <string name="time_out" tools:ignore="ExtraTranslation">Waktu Koneksi Habis. Coba Lagi.</string>

    <string-array name="data_tanaman">
        <item>Cabai</item>
        <item>Kentang</item>
        <item>Kubis</item>
        <item>Bawang Merah</item>
        <item>Bawang Putih</item>
    </string-array>

    <string-array name="data_kota">
        <item>Malang</item>
        <item>Surabaya</item>
        <item>Banyuwangi</item>
        <item>Jember</item>
        <item>Pacitan</item>
        <item>Madiun</item>
        <item>Kediri</item>
        <item>Probolinggo</item>
        <item>Bondowoso</item>
        <item>Mojokerto</item>
        <item>Blitar</item>
        <item>Situbondo</item>
        <item>Lumajang</item>
        <item>Pasuruan</item>
    </string-array>

    <string-array name="data_konsumsi_tanaman">
        <item>Cabai</item>
        <item>Kentang</item>
        <item>Bawang Merah</item>
        <item>Bawang Putih</item>
    </string-array>


    <string-array name="data_konsumsi_angka">
        <item>528,14</item>
        <item>771,46</item>
        <item>790,63</item>
        <item>506,42</item>
    </string-array>


    <string-array name="data_result">
        <item>Bayam</item>
        <item>Cabai</item>
        <item>Seledri</item>
    </string-array>
    <string-array name="care_level">
        <item>Mudah</item>
        <item>Sedikit susah</item>
        <item>Mudah</item>
    </string-array>
    <string-array name="size">
        <item>Sedang</item>
        <item>Sedang</item>
        <item>Kecil</item>
    </string-array>
    <string-array name="market_prediction">
        <item>Rp. 3.000/ikat</item>
        <item>Rp. 60.000/kg</item>
        <item>Rp. 5.000/ikat</item>
    </string-array>
    <string-array name="category">
        <item>Outdoor</item>
        <item>Outdoor</item>
        <item>Outdoor</item>
    </string-array>


    <string-array name="data_deskripsi">
        <item>Bayam (Amaranthus) adalah tumbuhan yang biasa ditanam untuk dikonsumsi daunnya sebagai sayuran hijau. Tumbuhan ini berasal dari Amerika tropik namun sekarang tersebar ke seluruh dunia. Tumbuhan ini dikenal sebagai sayuran sumber zat besi yang penting bagi tubuh.</item>
        <item>Cabai adalah buah dan tumbuhan anggota genus Capsicum. Buahnya dapat digolongkan sebagai sayuran maupun bumbu, tergantung bagaimana pemanfaatannya. Sebagai bumbu, buah cabai yang pedas sangat populer di Asia Tenggara sebagai penguat rasa untuk makanan. Bagi seni masakan Padang, cabai bahkan dianggap sebagai "bahan makanan pokok" kesepuluh (alih-alih kesembilan). Sangat sulit bagi masakan Padang dibuat tanpa cabai.</item>
        <item>Seledri (Apium graveolens L.) adalah sayuran daun dan tumbuhan obat yang biasa digunakan sebagai bumbu masakan. Beberapa negara termasuk Jepang, Cina dan Korea mempergunakan bagian tangkai daun sebagai bahan makanan. Di Indonesia tumbuhan ini diperkenalkan oleh penjajah Belanda dan digunakan daunnya untuk menyedapkan sup atau sebagai lalap.</item>
    </string-array>

    <integer-array name="data_result_photo">
        <item>@drawable/bayam</item>
        <item>@drawable/cabai</item>
        <item>@drawable/seledri</item>
    </integer-array>
</resources>