<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mybottomnav.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.mybottomnav.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.mybottomnav.ui.result.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.mybottomnav.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.mybottomnav.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_add" />
</navigation>