<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.AddFragment">

    <TextView
        android:id="@+id/predict_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/mulai_prediksi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/input_prediksi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <EditText
        android:id="@+id/ph_editText"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_bg"
        android:hint="@string/ph_tanah"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textSize="14dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />
    <EditText
        android:id="@+id/rain_editText"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_bg"
        android:hint="@string/curah_hujan"
        android:textSize="14dp"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ph_editText" />
    <Spinner
        android:id="@+id/city_selection"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rain_editText"
        android:background="@drawable/item_bg"
        />
    <EditText
        android:id="@+id/temperature_editText"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_bg"
        android:hint="@string/suhu"
        android:textSize="14dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_selection" />

    <Button
        android:id="@+id/predict_button"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:alpha="1"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        android:enabled="false"
        android:text="@string/prediksi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>