<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:alpha="0"
        android:layout_width="302dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_layout"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_button">


        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:text="@string/username"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_layout" />

        <TextView
            android:id="@+id/tv_username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username_layout"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toEndOf="@+id/iv_username"
            app:layout_constraintTop_toTopOf="@+id/iv_username" />

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:src="@drawable/ic_account_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:alpha="0"
        android:layout_width="302dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_layout"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_layout" />

        <TextView
            android:id="@+id/tv_email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/email_layout"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toEndOf="@+id/iv_email"
            app:layout_constraintTop_toTopOf="@+id/iv_email" />

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:src="@drawable/ic_email_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="86dp"
        android:alpha="0"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-23dp"
        android:src="@drawable/app_logo_bigger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:alpha="0"
        android:layout_marginEnd="45dp"
        android:background="@drawable/bg_button"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/gradient_light_gray"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <ImageView
            android:id="@+id/iv_account_fragment"
            android:layout_width="313dp"
            android:layout_height="313dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:src="@drawable/account_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>